# Contextual-Architecture-agentic-ai

./: .coverage  .gitignore  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  GETTING_STARTED.md  ISSUES.md  LICENSE  Long_memory.md  README.md  SECURITY.md  evaluation_harness.py  pr_evaluator.py  provisional_patent.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  research_paper.md  test_e2e.py
.contextual-architect/: plan.md
.contextual-architect/discovery/: architect.json  historian.json  style.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: README.md  __init__.py  __main__.py  agent_personas.py  alignment.py  architect.py  base.py  clarification_handler.py  config.py  context_budget.py  feedback.py  feedback_reader.py  github_resolver.py  graph_builder.py  historian.py  impact_analyzer.py  implementer.py  interactive.py  llm_client.py  logger.py  orchestrator.py  output_validator.py  pipeline_report.py  planner.py  plugins.py  pr_researcher.py  pr_search.py  project_scanner.py  reasoning_display.py  reviewer.py  safe_writer.py  setup_wizard.py  shell_executor.py  style_fingerprint.py  system_prompts.py  test_generator.py  thinking_agent.py  tool_runtime.py  trace_logger.py  workspace.py
agents/tests/: conftest.py  test_alignment.py  test_architect.py  test_base.py  test_clarification.py  test_context_budget.py  test_e2e_contracts.py  test_feedback.py  test_graph_builder.py  test_historian.py  test_orchestrator.py  test_output_validator.py  test_pipeline_report.py  test_planner.py  test_pr_search.py  test_reasoning_display.py  test_reviewer.py  test_safe_writer.py  test_shell_executor.py  test_style_fingerprint.py  test_test_generator.py  test_workspace.py
data_pipeline/: README.md  requirements-dev.txt  requirements.txt
data_pipeline/src/: utils.py
data_pipeline/src/codereviewer/: __init__.py  __main__.py  downloader.py
data_pipeline/src/pr_evolution/: __init__.py  __main__.py  config.py  extractor.py  github_client.py
data_pipeline/tests/: __init__.py  conftest.py  test_config.py  test_downloader.py  test_extractor.py  test_utils.py
docs/: getting-started.md
docs/research/: research_paper.md
evaluation_results/: eval_20260225_204701.json  eval_20260226_112522.json  eval_20260226_112658.json  eval_20260226_113017.json  eval_20260226_133855.json  eval_20260226_135102.json  eval_20260226_143109.json  pr_eval_20260226_215256.json  pr_eval_20260226_220044.json
evaluation_results/eval_20260226_112658_code/: simple-health-check.py
evaluation_results/eval_20260226_113017_code/: complex-refactor.py  security-input-validation.py  simple-health-check.py
evaluation_results/eval_20260226_135102_code/: complex-refactor.py  security-input-validation.py  simple-health-check.py
evaluation_results/eval_20260226_143109_code/: complex-refactor.py  security-input-validation.py  simple-health-check.py
examples/: README.md
fine_tuning/: .gitignore  Modelfile  README.md  __init__.py  conversation_to_dataset.py  export_gguf.py  format_dataset.py  generate_training_data.py  requirements-gpu.txt  requirements.txt  sample_tasks.py  seed_dataset.py  train.py
rag/: __init__.py  code_chunker.py  indexer.py  retriever.py  vector_store.py
storage/: __init__.py  sqlite_store.py
test-projects/fastapi-app/backend/.contextual-architect/: index_state.json  plan.md
test-projects/fastapi-app/backend/.contextual-architect/chroma_db/: chroma.sqlite3
test-projects/fastapi-app/backend/.contextual-architect/discovery/: architect.json  historian.json  style.json
tests/: test_rag_storage.py
