[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-cli"
version = "0.3.0"
description = "AI coding agent that learns your project's conventions — 12-stage pipeline, 7 LLM providers, $0 with free APIs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Yuvraj Sharma"},
]
keywords = ["ai", "code-generation", "multi-agent", "enterprise", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "httpx>=0.25.0",
    "google-genai>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
anthropic = [
    "httpx>=0.25.0",
]
all = [
    "httpx>=0.25.0",
    "PyGithub>=2.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
macro = "agents.__main__:main"

[project.urls]
Homepage = "https://github.com/yuvraj707sharma/Contextual-Architecture-agentic-ai"
Repository = "https://github.com/yuvraj707sharma/Contextual-Architecture-agentic-ai"
Issues = "https://github.com/yuvraj707sharma/Contextual-Architecture-agentic-ai/issues"

[tool.setuptools.packages.find]
include = ["agents*", "data_pipeline*", "rag*", "storage*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agents/tests", "data_pipeline/tests", "tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
