[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macro-cli"
version = "0.3.0"
description = "AI coding agent that learns your project's conventions — 12-stage pipeline, 7 LLM providers, $0 with free APIs"
readme = "README.md"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
authors = [
    {name = "Yuvraj Sharma"},
]
keywords = ["ai", "code-generation", "multi-agent", "enterprise", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
google = [
    "google-genai>=1.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
rag = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
anthropic = [
    "httpx>=0.25.0",
]
all = [
    "httpx>=0.25.0",
    "google-genai>=1.0.0",
    "PyGithub>=2.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]
data-pipeline = [
    "PyGithub>=2.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
]

[project.scripts]
macro = "agents.__main__:main"

[project.urls]
Homepage = "https://github.com/yuvraj707sharma/Contextual-Architecture-agentic-ai"
Repository = "https://github.com/yuvraj707sharma/Contextual-Architecture-agentic-ai"
Issues = "https://github.com/yuvraj707sharma/Contextual-Architecture-agentic-ai/issues"

[tool.setuptools.packages.find]
include = ["agents*", "data_pipeline*", "rag*", "storage*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["agents/tests", "tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
"agents/__init__.py" = ["F401"]
"agents/tests/*" = ["F821", "F841", "F401"]
"agents/test_generator.py" = ["F821"]
